2008-06-15  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/failure.c: Check return values. If lseek() failed, avoid
	reading or writing at an unspecified location. Log to syslog in
	case of failure when reading a faillog entry or writing in
	faillog or btmp.
	* libmisc/failure.c: Check if the file exist before opening it.
	* libmisc/failure.c: Log failures of open() and close() when
	necessary.

2008-06-14  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: Add the getrange() prototype.
	* lib/prototypes.h: Fix the valid_field() prototype (does not
	return an bool).
	* lib/prototypes.h: Fix the valid() prototype (it does return a
	bool).

2008-06-14  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/getdef.c: Fix the getdef_ulong() prototype.
	* lib/getdef.h: Fix the getdef_ulong() prototype.

2008-06-14  Nicolas François  <nicolas.francois@centraliens.net>

	* src/lastlog.c: Use getrange to parse the range of users.
	* src/lastlog.c: umin and umax do not need to be signed long. Use
	an unsigned long which might be needed to parse a GID or UID. Add
	the has_umin and has_umax to replace the -1 values.
	* src/lastlog.c: Cast dates to time_t.
	* src/lastlog.c: Prefix lastlog errors with "lastlog: ".

2008-06-14  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/getlong.c: Reset errno before calling strtol().
	Otherwise, errno could be already set to ERANGE.

2008-06-14  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/Makefile.am, libmisc/getrange.c: Added function to parse
	a range (useful for lastlog).

2008-06-14  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chsh.c: <signal.h> is not needed.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: Define AUDIT_NO_ID to (unsigned int) -1. This
	value should be used when the ID should not be considered.
	* lib/prototypes.h: Fix the prototype of do_rlogin() according to
	earlier changes.
